Added statistics info